2011-02-07 Kazuhiko
* check 'Update Business Template Workflows' and remove overriding of portal_workflow/business_template_installation_workflow/scripts/BusinessTemplate_install in this business template, but add it in 'Paths of objects that should be kept'.
* remove set and upgrade product_path, that should be handled by instance creation in buildout.

2011-02-04 Kazuhiko
* remove system_upgrader and product_upgrader, that should be handled by instance creation in buildout.

2010-09-30 lucas
* Added message to be logged if during the upgrade of the Local Roles for security groups the Portal Type document does not exists.

2010-02-16 nicolas
* Add new properties in Signature in order to trig some actions just before or just after business template update/installation

2010-02-12 nicolas
* add REINSTALABLE_BT5_ID_LIST inside Signature API in order to call reinstallation of Business Templates and revert local changes.
* Extend Unit Test (work on going, known bug will be fixed)
Reviewed by Rafael

2009-08-04 jps
* Refactored (and broken) by JPS with lots of pseudo-code

2009-04-17 ivan
* Split to specific migrations using skin folders

2009-03-20 ivan
* Start to refector as generic ERP5 upgrader

2009-03-12 ivan
* Initial import