@@ -59,10 +59,6 @@ portal = context.getPortalObject()\n
 \n
 message_list = []\n
 \n
-message_list.extend(context.ERP5Site_upgradePythonExecutable())\n
-\n
-message_list.extend(context.ERP5Site_upgradeSoftwareHome())\n
-\n
 message_list.extend(context.ERP5Site_upgradeBusinessTemplateList())\n
 \n
 message_list.extend(context.ERP5Site_upgradeGlobalPropertyList())\n
